--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,1 +1,15 @@
-Copyright {{"now"|date('Y')}}
+<div>
+    <div class="container">
+        <div class="section">
+            <div class="columns is-centered is-multiline has-text-centered">
+                <div class="column is-12">
+                    <a class="logo-link" href="{{ site.url }}" rel="home">
+                        <img src="{{ TimberImage(options.logo).src }}" />
+                    </a>
+
+                    Copyright {{"now"|date('Y')}}
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
