--- a/src/sass/admin-login.scss
+++ b/src/sass/admin-login.scss
@@ -2,17 +2,55 @@
 @import "mixins";
 
 body {
-    //background-color: $color-gray;
+  //background-color: rgba($color-black, 0.75);
 }
 
 .login {
   h1 {
     a {
-      //background-image: url(#{$path-images}/logo.png) !important;
+      background-image: url(../../#{$path-images}/logo.png) !important;
       //background-size: 300px;
       //width: 100%;
       //height: 90px;
     }
+  }
+
+  input[type=text],
+  input[type=search],
+  input[type=radio],
+  input[type=tel],
+  input[type=time],
+  input[type=url],
+  input[type=week],
+  input[type=password],
+  input[type=checkbox],
+  input[type=color],
+  input[type=date],
+  input[type=datetime],
+  input[type=datetime-local],
+  input[type=email],
+  input[type=month],
+  input[type=number],
+  select,
+  textarea {
+    &:focus {
+      //border-color: $color-red;
+      //box-shadow: 0 0 2px rgba($color-red, .8);
+    }
+  }
+
+  &.wp-core-ui .button-primary {
+    //background: $color-red;
+    //border-color: $color-red $color-red $color-red;
+    //box-shadow: 0 1px 0 $color-red;
+    //color: $color-white;
+    //text-decoration: none;
+    //text-shadow: 0 -1px 1px $color-red, 1px 0 1px $color-red, 0 1px 1px $color-red, -1px 0 1px $color-red;
+  }
+
+  #login_error,
+  .message {
+    //border-left-color: $color-red;
   }
 
   #backtoblog,
@@ -21,7 +59,7 @@ body {
     a {
       &,
       &:hover {
-        //color: $color-yellow;
+        //color: $color-white;
       }
     }
   }
