--- a/templates/404.twig
+++ b/templates/404.twig
@@ -1,5 +1,11 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+	<div class="container">
+		<div class="section">
+			<div class="columns is-multiline">
+				<h2>Sorry, we couldn't find what you're looking for.</h2>
+			</div>
+		</div>
+	</div>
 {% endblock %}
