--- a/templates/base.twig
+++ b/templates/base.twig
@@ -7,7 +7,7 @@
 {% endblock %}
 
 	<body class="{{body_class}}" data-template="base.twig">
-		<header class="header" >
+		<header class="header is-clearfix" >
 			{% block header %}
 				<div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
@@ -20,7 +20,7 @@
 			{% endblock %}
 		</header>
 
-		<section id="content" role="main" class="content-wrapper">
+		<section id="content" role="main" class="content-wrapper is-clearfix">
 			{% if title %}<h1>{{title}}</h1>{% endif %}
 			<div class="wrapper {{sidebar_class}}">
 				{% block content %}
@@ -35,7 +35,7 @@
 		</section>
 
 		{% block footer %}
-			<footer id="footer">
+			<footer id="footer is-clearfix">
 				{% include 'footer.twig' %}
 			</footer>
 			{{ function('wp_footer') }}
