--- a/templates/html-header.twig
+++ b/templates/html-header.twig
@@ -19,4 +19,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="author" href="{{ site.theme.link }}/humans.txt" />
     <link rel="pingback" href="{{ site.pingback_url }}" />
+    <link rel='shortcut icon' type='image/x-icon' href='{{ site.theme.link }}/favicon.ico' />
     {{function('wp_head')}}
