--- a/templates/page.twig
+++ b/templates/page.twig
@@ -1,14 +1,13 @@
 {% extends "base.twig" %}
 
-{% block content %}
-	<div class="content-wrapper">
-		<article class="post-type-{{post.post_type}}" id="post-{{post.ID}}">
-			<section class="article-content">
-				<h1 class="article-h1">{{post.title}}</h1>
-				<div class="article-body">
-					{{post.content}}
+{{% block content %}
+<div class="container">
+	<div class="section">
+		<div class="columns is-multiline">
+			<div class="column is-12-mobile">
+				<div class="columns is-multiline">
 				</div>
-			</section>
-		</article>
-	</div><!-- /content-wrapper -->
-{% endblock %}
+			</div>
+		</div>
+	</div>
+</div>
