--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -4,5 +4,5 @@ $color-black: #000000;
 $color-gray: rgb(88, 88, 88);
 
 // Path
-$path-fonts: 'assets/fonts'; // path #{$path-fonts}
+$path-fonts: '../fonts'; // path #{$path-fonts}
 $path-images: 'assets/img'; // path #{$path-images}
