--- a/templates/base.twig
+++ b/templates/base.twig
@@ -35,7 +35,7 @@
 		</section>
 
 		{% block footer %}
-			<footer id="footer is-clearfix">
+			<footer class="footer is-clearfix">
 				{% include 'footer.twig' %}
 			</footer>
 			{{ function('wp_footer') }}
