--- a/templates/page.twig
+++ b/templates/page.twig
@@ -1,6 +1,6 @@
 {% extends "base.twig" %}
 
-{{% block content %}
+{% block content %}
 <div class="container">
 	<div class="section">
 		<div class="columns is-multiline">
@@ -11,3 +11,4 @@
 		</div>
 	</div>
 </div>
+{% endblock %}
